Quick fix: collapsing toggles in Course Browser transition too fast

--- a/planner/static/styles/main.css
+++ b/planner/static/styles/main.css
@@ -39,6 +39,3 @@ a.text-body:hover {
 .dragging {
 	opacity: 0.5;
 }
-.collapsing {
-	transition: 0.2s;
-}
